--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -29,6 +29,14 @@
 
 <div class="copyright">
     <p>© Copyright Elizabeth Restrepo - 2023</p>
+
+    <a href="https://www.linkedin.com/in/elizabeth-restrepo-256541158/">
+        <img class="icons__redes" src="./assets/img/linkedin.png" alt="">
+    </a>
+
+    <a href="https://github.com/lizz023/e-commerce">
+        <img class="icons__redes" src="./assets/img/github.png" alt="">
+    </a>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
