--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -114,6 +114,10 @@
     flex-direction: column;
 }
 
+.icons__redes{
+    width: 30px;
+}
+
 @media screen and (min-width:768px) {
     .footer__container{
         padding: 32px;
